[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemies/StatueEnemy.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.45

[sub_resource type="CapsuleMesh" id=2]
radius = 0.45

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.737255, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.2
bottom_radius = 0.2
height = 0.4

[sub_resource type="CapsuleShape" id=5]
radius = 0.48

[node name="StatueEnemy" type="KinematicBody"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1.91069e-15, 4.37114e-08, -1.49325, 1, -4.37114e-08, 0, -4.37114e-08, -1, -6.52721e-08, 0, 0.425, -0.307567 )
mesh = SubResource( 4 )

[node name="StatueArea" type="Area" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape" type="CollisionShape" parent="StatueArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 5 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="StatueArea" to="." method="_on_StatueArea_area_entered"]
[connection signal="area_exited" from="StatueArea" to="." method="_on_StatueArea_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
